internal/envoy/config/testdata/access_log_typed_config.yaml
"@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
stat_prefix: ingress_http
access_log:
    - name: envoy.access_loggers.stdout
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
route_config:
    name: local_route
    virtual_hosts:
        - name: direct_response_service
          domains: ["*"]
          routes:
            - match:
                prefix: "/"
              direct_response:
                status: 200
                body:
                    inline_string: "Hello, World!"
http_filters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
