internal/envoy/config/testdata/no_admin.yaml
static_resources:
  listeners:
    - name: test_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
