internal/envoy/config/testdata/static_file_typed_config.yaml
"@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
stat_prefix: ingress_http
route_config:
    name: local_route
    virtual_hosts:
        - name: local_service
          domains:
            - "*"
          routes:
            - match:
                prefix: "/"
              direct_response:
                status: 200
                body:
                    filename: "response.txt"
http_filters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
